8327423: C2 remove_main_post_loops: check if main-loop belongs to pre-loop, not just assert

Backport-of: fadc4b197e927cfa1814fe6cb65ee04b3bd4b0c2